rust/src/methods/encode/html/snapshots/html_fragments@audio.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/audio.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <audio itemtype="https://schema.org/AudioObject" itemscope  controls src="audio.mp3">
      </audio>
    </p>
  </div>
</article>
