rust/src/methods/encode/html/snapshots/html_fragments@code-block.html.snap
---
source: rust/src/methods/encode/html.rs
expression: encoded
input_file: fixtures/fragments/html/code-block.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <pre slot="0" itemtype="https://stenci.la/CodeBlock" itemscope>
      <code >Code with no language</code>
    </pre>
    <pre slot="1" itemtype="https://stenci.la/CodeBlock" itemscope>
      <code class="language-python"># Some Python code
1 + 1</code>
    </pre>
  </div>
</article>
