rust/src/methods/encode/html/snapshots/html_fragments@code-fragment.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/code-fragment.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>Some<code itemtype="https://stenci.la/CodeFragment" itemscope>code</code>in a paragraph.</p>
    <p itemtype="https://stenci.la/Paragraph" itemscope>With a language<code itemtype="https://stenci.la/CodeFragment" itemscope  class="language-python">
        <meta itemprop="programmingLanguage" content="python"/>1 + 1</code>specified.</p>
  </div>
</article>
