rust/src/methods/encode/html/snapshots/html_fragments@delete.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/delete.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>Some<del itemtype="https://stenci.la/Delete" itemscope>deleted</del>text.</p>
  </div>
</article>
