rust/src/methods/encode/html/snapshots/html_fragments@emphasis.html.snap
---
source: rust/src/methods/encode/html.rs
expression: encoded
input_file: fixtures/fragments/html/emphasis.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p slot="0" itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">
        <span slot="0">Some</span>
        <em slot="1" itemtype="https://stenci.la/Emphasis" itemscope>
          <span slot="content">
            <span slot="0">emphasized</span>
          </span>
        </em>
        <span slot="2">text.</span>
      </span>
    </p>
  </div>
</article>
