rust/src/methods/encode/html/snapshots/html_fragments@heading.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/heading.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <h2 itemtype="https://stenci.la/Heading" itemscope>Title of document</h2>
    <p itemtype="https://stenci.la/Paragraph" itemscope>The h1 tag is reserved for single use by the title. So a heading of depth 1 uses h2 etc</p>
    <h2 itemtype="https://stenci.la/Heading" itemscope>Heading 1</h2>
    <h3 itemtype="https://stenci.la/Heading" itemscope>Heading 2</h3>
    <h4 itemtype="https://stenci.la/Heading" itemscope>Heading 3</h4>
    <h5 itemtype="https://stenci.la/Heading" itemscope>Heading 4</h5>
    <h6 itemtype="https://stenci.la/Heading" itemscope>Heading 5</h6>
    <h2 itemtype="https://stenci.la/Heading" itemscope id="heading-with-an-id">Heading with an id</h2>
  </div>
</article>
