rust/src/methods/encode/html/snapshots/html_fragments@image.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/image.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">An image<img itemtype="https://schema.org/ImageObject" itemscope  src="image.png"/>.</span>
    </p>
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">An image with a title<img itemtype="https://schema.org/ImageObject" itemscope  src="image.png"/>.</span>
    </p>
  </div>
</article>
