rust/src/methods/encode/html/snapshots/html_fragments@list.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/list.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <div itemtype="https://stenci.la/List" itemscope>
      <ul slot="items">
        <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>apple</p>
        </li>
        <li slot="1" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>pear</p>
        </li>
        <li slot="2" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>orange</p>
        </li>
      </ul>
    </div>
    <div itemtype="https://stenci.la/List" itemscope>
      <ol slot="items">
        <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>first</p>
        </li>
        <li slot="1" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>second</p>
        </li>
        <li slot="2" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>third</p>
        </li>
      </ol>
    </div>
    <div itemtype="https://stenci.la/List" itemscope>
      <ul slot="items">
        <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
          <p itemtype="https://stenci.la/Paragraph" itemscope>nested</p>
          <div itemtype="https://stenci.la/List" itemscope>
            <ul slot="items">
              <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
                <p itemtype="https://stenci.la/Paragraph" itemscope>2a</p>
                <div itemtype="https://stenci.la/List" itemscope>
                  <ul slot="items">
                    <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
                      <p itemtype="https://stenci.la/Paragraph" itemscope>3a</p>
                    </li>
                  </ul>
                </div>
              </li>
              <li slot="1" itemtype="https://stenci.la/ListItem" itemscope>
                <p itemtype="https://stenci.la/Paragraph" itemscope>2b</p>
              </li>
              <li slot="2" itemtype="https://stenci.la/ListItem" itemscope>
                <p itemtype="https://stenci.la/Paragraph" itemscope>2c</p>
                <div itemtype="https://stenci.la/List" itemscope>
                  <ul slot="items">
                    <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
                      <p itemtype="https://stenci.la/Paragraph" itemscope>3b</p>
                      <div itemtype="https://stenci.la/List" itemscope>
                        <ul slot="items">
                          <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
                            <p itemtype="https://stenci.la/Paragraph" itemscope>4a</p>
                          </li>
                        </ul>
                      </div>
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
    <div itemtype="https://stenci.la/List" itemscope>
      <ol slot="items">
        <li slot="0" itemtype="https://stenci.la/ListItem" itemscope>
          <em itemtype="https://stenci.la/Emphasis" itemscope>solo inline</em>
        </li>
      </ol>
    </div>
  </div>
</article>
