rust/src/methods/encode/html/snapshots/html_fragments@non-textual-annotation.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/non-textual-annotation.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>Nontextual annotations like<u itemtype="https://stenci.la/NontextualAnnotation" itemscope>this</u>
    </p>
  </div>
</article>
