rust/src/methods/encode/html/snapshots/html_fragments@paragraph.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/paragraph.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">First paragraph.</span>
    </p>
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">Second paragraph.</span>
    </p>
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">Third paragraph,
split over multiple
lines.</span>
    </p>
  </div>
</article>
