rust/src/methods/encode/html/snapshots/html_fragments@strong.html.snap
---
source: rust/src/methods/encode/html/mod.rs
expression: encoded
input_file: fixtures/fragments/html/strong.html

---
<article slot="root" itemtype="https://schema.org/Article" itemscope>
  <div slot="content">
    <p itemtype="https://stenci.la/Paragraph" itemscope>
      <span slot="content">A<strong itemtype="https://stenci.la/Strong" itemscope>
          <span slot="content">strongly</span>
        </strong>emphasized word.</span>
    </p>
  </div>
</article>
